<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textComprar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Comprar"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="31dp" />

    <LinearLayout
        android:layout_width="381dp"
        android:layout_height="53dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="73dp">

        <Button
            android:id="@+id/button1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnvuelos"
            android:textSize="7sp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnpaquetes"
            android:textSize="7sp" />

        <Button
            android:id="@+id/button3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:text="@string/btnhoteles"
            android:textSize="7sp" />

        <Button
            android:id="@+id/button4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:text="@string/Btnautos"
            android:textSize="7sp" />

        <Button
            android:id="@+id/button5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:text="@string/btnseguros"
            android:textSize="7sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="386dp"
        android:layout_height="464dp"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="133dp">

        <!-- Selector de ida y vuelta -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <RadioButton
                android:id="@+id/radioButtonRoundTrip"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Ida y Vuelta" />

            <RadioButton
                android:id="@+id/radioButtonOneWay"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Solamente Ida" />
        </LinearLayout>

        <!-- Origen y Destino -->
        <EditText
            android:id="@+id/editTextOrigin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/edittext_background"
            android:drawableStart="@drawable/ic_plane_departure"
            android:hint="Origen"
            android:padding="12dp" />

        <EditText
            android:id="@+id/editTextDestination"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/edittext_background"
            android:drawableStart="@drawable/ic_plane_arrival"
            android:hint="Destino"
            android:padding="12dp" />

        <!-- Fechas de viaje -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <EditText
                android:id="@+id/editTextDepartureDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/edittext_background"
                android:hint="Día de ida"
                android:inputType="date"
                android:padding="12dp" />

            <EditText
                android:id="@+id/editTextReturnDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:background="@drawable/edittext_background"
                android:hint="Día de retorno"
                android:inputType="date"
                android:padding="12dp" />
        </LinearLayout>

        <!-- Clase de viaje y pasajeros -->
        <Spinner
            android:id="@+id/spinnerClass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="Clase (Económica)"
            android:spinnerMode="dropdown" />

        <Spinner
            android:id="@+id/spinnerPassengers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="Pasajeros (1 adulto)" />

        <!-- Checkbox para promociones -->
        <CheckBox
            android:id="@+id/checkBoxPromotions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Usar puntos LATAM Pass" />

        <!-- Botón para buscar vuelos -->
        <Button
            android:id="@+id/buttonSearchFlights"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="#FF0044"
            android:padding="12dp"
            android:text="Procurar vuelos"
            android:textColor="#FFFFFF" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Compre con nosotros con nuestro asistente virtual"
        tools:layout_editor_absoluteX="48dp"
        tools:layout_editor_absoluteY="613dp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="abrir whatsap"
        tools:layout_editor_absoluteX="48dp"
        tools:layout_editor_absoluteY="643dp" />


</androidx.constraintlayout.widget.ConstraintLayout>